--- a/falldetection.ipynb
+++ b/falldetection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3cg2NvOmrmCRFP+uoT/Ge",
+      "authorship_tag": "ABX9TyOPzMRag/BvdEmqosZzjb22",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,12 +82,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "model = models.Sequential([\n",
+        "    layers.Conv2D(16, (3,3), activation= 'relu', input_shape = (224,224,3)),\n",
+        "    layers.MaxPooling2D(2,2),\n",
+        "    layers.BatchNormalization(),\n",
+        "\n",
+        "    layers.Conv2D(32, (3,3), activation= 'relu'),\n",
+        "    layers.MaxPooling2D(2,2),\n",
+        "    layers.BatchNormalization(),\n",
+        "\n",
+        "    layers.Conv2D(64, (3,3), activation= 'relu'),\n",
+        "    layers.MaxPooling2D(2,2),\n",
+        "    layers.BatchNormalization(),\n",
+        "\n",
+        "    layers.Flatten(),\n",
+        "    layers.Dense(128, activation='relu'),\n",
+        "    layers.Dropout(0.5),\n",
+        "    layers.Dense(1, activation='sigmoid')\n",
+        "])"
+      ],
       "metadata": {
-        "id": "gEwVFTgCOK12"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gEwVFTgCOK12",
+        "outputId": "808d1182-a971-4f75-8150-f53d6f58042b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        }
+      ]
     }
   ]
 }
