--- a/falldetection.ipynb
+++ b/falldetection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPzMRag/BvdEmqosZzjb22",
+      "authorship_tag": "ABX9TyMCkQ7S9PB6MfV19OQ2OPP5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,6 +120,79 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(loss='binary_crossentropy',\n",
+        "              optimizer = tf.keras.optimizers.Adam(learning_rate=1e-4),\n",
+        "              metrics = ['accuracy'])"
+      ],
+      "metadata": {
+        "id": "RqtRVRNnRtoF"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "early_stop = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+        "history = model.fit(train_data, epochs=10, validation_data=valid_data, callbacks=[early_stop])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9NBymVh4RucB",
+        "outputId": "85c61a7c-f3f5-42ab-b7dd-1dddada29cea"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+            "  self._warn_if_super_not_called()\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m63s\u001b[0m 2s/step - accuracy: 0.9058 - loss: 0.1959 - val_accuracy: 1.0000 - val_loss: 0.0844\n",
+            "Epoch 2/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 0.9935 - loss: 0.0127 - val_accuracy: 1.0000 - val_loss: 0.0024\n",
+            "Epoch 3/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 0.9961 - loss: 0.0132 - val_accuracy: 1.0000 - val_loss: 1.5374e-04\n",
+            "Epoch 4/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.9969 - loss: 0.0060 - val_accuracy: 1.0000 - val_loss: 8.8350e-06\n",
+            "Epoch 5/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 0.9948 - loss: 0.0083 - val_accuracy: 1.0000 - val_loss: 4.4910e-07\n",
+            "Epoch 6/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 0.9988 - loss: 0.0025 - val_accuracy: 1.0000 - val_loss: 1.6529e-07\n",
+            "Epoch 7/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 1.0000 - loss: 7.5142e-04 - val_accuracy: 1.0000 - val_loss: 5.9126e-08\n",
+            "Epoch 8/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 1.0000 - loss: 6.4026e-04 - val_accuracy: 1.0000 - val_loss: 3.6249e-08\n",
+            "Epoch 9/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 0.9989 - loss: 0.0010 - val_accuracy: 1.0000 - val_loss: 4.7278e-08\n",
+            "Epoch 10/10\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 1.0000 - loss: 2.2213e-04 - val_accuracy: 1.0000 - val_loss: 9.6768e-08\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NAc2dGDzUlia"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
