--- a/falldetection.ipynb
+++ b/falldetection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCkQ7S9PB6MfV19OQ2OPP5",
+      "authorship_tag": "ABX9TyNTorHDbKyStURrFMu1+M2r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
         "    layers.BatchNormalization(),\n",
         "\n",
         "    layers.Flatten(),\n",
-        "    layers.Dense(128, activation='relu'),\n",
+        "    layers.Dense(64, activation='relu'),\n",
         "    layers.Dropout(0.5),\n",
         "    layers.Dense(1, activation='sigmoid')\n",
         "])"
@@ -107,9 +107,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gEwVFTgCOK12",
-        "outputId": "808d1182-a971-4f75-8150-f53d6f58042b"
+        "outputId": "6d614dd6-34d5-4057-a278-670e951b4f15"
       },
-      "execution_count": 5,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "RqtRVRNnRtoF"
       },
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -145,54 +145,104 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9NBymVh4RucB",
-        "outputId": "85c61a7c-f3f5-42ab-b7dd-1dddada29cea"
+        "outputId": "7ad0859b-327f-4985-fde2-2203d687b327"
       },
-      "execution_count": 9,
+      "execution_count": 28,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-            "  self._warn_if_super_not_called()\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m63s\u001b[0m 2s/step - accuracy: 0.9058 - loss: 0.1959 - val_accuracy: 1.0000 - val_loss: 0.0844\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 2s/step - accuracy: 0.8694 - loss: 0.3167 - val_accuracy: 1.0000 - val_loss: 0.0784\n",
             "Epoch 2/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 0.9935 - loss: 0.0127 - val_accuracy: 1.0000 - val_loss: 0.0024\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m79s\u001b[0m 2s/step - accuracy: 0.9799 - loss: 0.0482 - val_accuracy: 1.0000 - val_loss: 0.0014\n",
             "Epoch 3/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 0.9961 - loss: 0.0132 - val_accuracy: 1.0000 - val_loss: 1.5374e-04\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 2s/step - accuracy: 0.9936 - loss: 0.0253 - val_accuracy: 1.0000 - val_loss: 7.6561e-05\n",
             "Epoch 4/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 2s/step - accuracy: 0.9969 - loss: 0.0060 - val_accuracy: 1.0000 - val_loss: 8.8350e-06\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 2s/step - accuracy: 0.9942 - loss: 0.0135 - val_accuracy: 1.0000 - val_loss: 1.3007e-06\n",
             "Epoch 5/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 0.9948 - loss: 0.0083 - val_accuracy: 1.0000 - val_loss: 4.4910e-07\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 2s/step - accuracy: 0.9997 - loss: 0.0034 - val_accuracy: 1.0000 - val_loss: 3.7471e-07\n",
             "Epoch 6/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 0.9988 - loss: 0.0025 - val_accuracy: 1.0000 - val_loss: 1.6529e-07\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 2s/step - accuracy: 0.9996 - loss: 0.0062 - val_accuracy: 1.0000 - val_loss: 5.6261e-07\n",
             "Epoch 7/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 1.0000 - loss: 7.5142e-04 - val_accuracy: 1.0000 - val_loss: 5.9126e-08\n",
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 2s/step - accuracy: 0.9993 - loss: 0.0048 - val_accuracy: 1.0000 - val_loss: 4.6528e-07\n",
             "Epoch 8/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 1.0000 - loss: 6.4026e-04 - val_accuracy: 1.0000 - val_loss: 3.6249e-08\n",
-            "Epoch 9/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 2s/step - accuracy: 0.9989 - loss: 0.0010 - val_accuracy: 1.0000 - val_loss: 4.7278e-08\n",
-            "Epoch 10/10\n",
-            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 2s/step - accuracy: 1.0000 - loss: 2.2213e-04 - val_accuracy: 1.0000 - val_loss: 9.6768e-08\n"
+            "\u001b[1m29/29\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 2s/step - accuracy: 0.9981 - loss: 0.0056 - val_accuracy: 1.0000 - val_loss: 1.7173e-06\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "test_loss, test_acc = model.evaluate(test_data)\n",
+        "print(f'Test accuracy: {test_acc}')"
+      ],
       "metadata": {
-        "id": "NAc2dGDzUlia"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NAc2dGDzUlia",
+        "outputId": "ef650b94-928a-446d-cd5b-962cf99a3fdf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 222ms/step - accuracy: 1.0000 - loss: 3.7227e-07\n",
+            "Test accuracy: 1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "import os\n",
+        "drive.mount('/content/drive')\n",
+        "model_save_path = '/content/drive/MyDrive/models/fall_detection_model.h5'\n",
+        "os.makedirs('/content/drive/MyDrive/models', exist_ok=True)\n",
+        "model.save(model_save_path)\n",
+        "print(f\"Model saved to {model_save_path}\")\n",
+        "from tensorflow.keras.models import load_model\n",
+        "model = load_model('/content/drive/MyDrive/models/fall_detection_model.h5')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r7QYZJRRex7M",
+        "outputId": "e4e9ef32-6abf-4e25-eb51-980648baaf80"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n",
+            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model saved to /content/drive/MyDrive/models/fall_detection_model.h5\n"
+          ]
+        }
+      ]
     }
   ]
 }
